<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:id="@+id/sv_add_article"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/btn_continue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_article_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="80dp"
                android:layout_marginEnd="24dp"
                android:fontFamily="@font/ubuntu_italic"
                android:text="@string/what_s_the_article_name"
                android:textAlignment="center"
                android:textColor="@color/colorTextBlack"
                android:textSize="32sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btn_close" />

            <EditText
                android:id="@+id/et_article_name"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginTop="64dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/edittext_search"
                android:elevation="5dp"
                android:ems="10"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:fontFamily="@font/ubuntu_regular"
                android:hint="@string/enter_article_name"
                android:inputType="textPersonName"
                android:padding="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/tv_article_name"
                app:layout_constraintStart_toStartOf="@+id/tv_article_name"
                app:layout_constraintTop_toBottomOf="@+id/tv_article_name" />

            <ImageButton
                android:id="@+id/btn_close"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/rounded_button"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_close_black" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

    <Button
        android:id="@+id/btn_continue"
        android:layout_width="335dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/rounded_button"
        android:fontFamily="@font/ubuntu_italic"
        android:text="@string/continue_text"
        android:textAllCaps="false"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>